Wed May  2 17:08:28 UTC 2012  Jeff Parsons <j.parsons@vanderbilt.edu>

        * THANKS:

          Added Markus Manck <Markus dot Manck at Philotech dot de>

Tue May  1 17:38:13 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/msvc_mpc_auto_compile.pl:
          Added -project_root to override $ACE_ROOT as root to search for
          solutions. This is needed when using this script in a flat directory
          layout

Tue May  1 12:52:45 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_sys_time.cpp:
        * ace/config-win32-msvc-10.h:
        * ace/config-win32-msvc-8.h:
        * ace/config-win32-msvc-9.h:
          WinCE also has non conformant timeval. When _USE_32BIT_TIME_T is not
          defined we have to use our workaround in all cases

Tue May  1 11:42:22 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/sys/os_stat.h:
          Fixed compile error

Tue May  1 10:25:37 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/sys/os_stat.h:
          Compile fix for WinCE 7

Tue May  1 07:48:30 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Mem_Map.cpp:
          Layout changes

        * ace/config-win32-msvc-9.h:
          Removed wince comment

Sun Apr 29 19:17:29 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/msvc_mpc_auto_compile.pl:
          More improvements to this script

Sun Apr 29 19:01:08 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/msvc_mpc_auto_compile.pl:
          Support flat layout

Fri Apr 27 18:43:31 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/msvc_mpc_auto_compile.pl:
          Corrected output messages

Fri Apr 27 18:40:51 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_time.h:
        * ace/config-win32-msvc-9.h:
          First fixes for WinCE 7

Wed Apr 25 07:02:16 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
